notification-service integration removed && added new end-point